Mise à jour du projet Angular

--- a/angular.json
+++ b/angular.json
@@ -16,10 +16,7 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets", {"glob": "/*", "input":"public"}
             ],
             "styles": [
               "src/styles.css"
@@ -74,11 +71,9 @@
           "options": {
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+  "src/assets",
+  {"glob": "/*", "input":"public"}
+],
             "styles": [
               "src/styles.css"
             ]
